k8s/4nf-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 4nf-backend
  namespace: lion-4nf
  labels:
    app: 4nf-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 4nf-backend
  template:
    metadata:
      labels:
        app: 4nf-backend
    spec:
      containers:
        - name: 4nf-backend
          image: ghcr.io/404-vpdlwlfmfckwdmftndjqtdma/4nf-backend:391676d7cc407d450b0ea0f21b71d38138720806
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: 4nf-backend
  namespace: lion-4nf
  labels:
    app: 4nf-backend
spec:
  selector:
    app: 4nf-backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 4nf-backend
  namespace: lion-4nf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: viinac.iptime.org
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 4nf-api.coder-han.com
      secretName: 4nf-backend-tls
  rules:
    - host: 4nf-api.coder-han.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 4nf-backend
                port:
                  number: 8080
